--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,21 @@
-# General
+node_modules
+
+# Output
+.output
+.vercel
+/.svelte-kit
+/build
+
+# OS
 .DS_Store
-.AppleDouble
-.LSOverride
+Thumbs.db
 
-Icon[\r]
+# Env
+.env
+.env.*
+!.env.example
+!.env.test
 
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
