--- a/package.json
+++ b/package.json
@@ -3,20 +3,31 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"dev:main": "cd apps/main && vite dev",
+		"dev:blog": "cd apps/blog && vite dev",
+		"build": "concurrently --kill-others \"npm:build:*\"",
+		"build:main": "cd apps/main && vite build",
+		"build:blog": "cd apps/blog && vite build",
+		"preview": "concurrently --kill-others \"npm:preview:*\"",
+		"preview:main": "cd apps/blog && vite preview",
+		"preview:blog": "cd apps/blog && vite preview",
+		"check": "concurrently --kill-others \"npm:check:*\"",
+		"check:main": "cd apps/blog && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:blog": "cd apps/blog && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"test": "vitest",
-		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+		"lint": "concurrently --kill-others \"npm:lint:*\"",
+		"lint:main": "cd apps/main && prettier --check . && eslint .",
+		"lint:blog": "cd apps/blog && prettier --check . && eslint .",
+		"format": "concurrently --kill-others \"npm:format:*\"",
+		"format:main": "cd apps/main && prettier --write .",
+		"format:blog": "cd apps/blog && prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-vercel": "^5.4.1",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.7",
+		"concurrently": "^8.2.2",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -26,7 +37,8 @@
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
-		"tailwindcss": "^4.0.0-alpha.16",
+		"svelte-preprocess-import-assets": "^1.1.0",
+		"tailwindcss": "^4.0.0-alpha.17",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0-alpha.20",
@@ -35,6 +47,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@tailwindcss/vite": "^4.0.0-alpha.16"
+		"@tailwindcss/vite": "^4.0.0-alpha.17"
 	}
 }
