--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
 		"mode-watcher": "^0.4.0",
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1"
+	},
+	"optionalDependencies": {
+		"@rollup/rollup-linux-x64-gnu": "4.9.5"
 	}
 }
