--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "checkJs": true,
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
+        "allowImportingTsExtensions": true,
         "paths": {
             "$lib": [
                 "./apps/lib"
