--- a/package.json
+++ b/package.json
@@ -47,5 +47,16 @@
 		"vite": "^5.0.3",
 		"vitest": "^1.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"bits-ui": "^0.21.13",
+		"clsx": "^2.1.1",
+		"lucide-svelte": "^0.414.0",
+		"mode-watcher": "^0.4.0",
+		"tailwind-merge": "^2.4.0",
+		"tailwind-variants": "^0.2.1"
+	},
+	"optionalDependencies": {
+		"@rollup/rollup-linux-x64-gnu": "4.9.5"
+	}
 }
