--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
 		"@sveltejs/adapter-vercel": "^5.4.1",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
-		"@types/eslint": "^8.56.7",
+		"@tailwindcss/typography": "^0.5.14",
+		"@types/eslint": "^8.56.11",
 		"autoprefixer": "^10.4.19",
 		"concurrently": "^8.2.2",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
+		"mdsvex": "^0.11.2",
 		"postcss": "^8.4.40",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.1.2",
@@ -53,6 +55,13 @@
 		"clsx": "^2.1.1",
 		"lucide-svelte": "^0.414.0",
 		"mode-watcher": "^0.4.0",
+		"moment": "^2.30.1",
+		"prism-themes": "^1.9.0",
+		"rehype-autolink-headings": "^7.1.0",
+		"rehype-slug": "^6.0.0",
+		"rehype-toc": "^3.0.2",
+		"rehype-widont": "^0.1.1",
+		"remark-gfm": "^4.0.0",
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1"
 	},
