--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,8 @@
         "skipLibCheck": true,
         "sourceMap": true,
         "strict": true,
-        "module": "NodeNext",
-        "moduleResolution": "NodeNext"
+        "module": "ESNext",
+        "moduleResolution": "Bundler"
     }
     // Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
     // except $lib which is handled by https://kit.svelte.dev/docs/configuration#files
