--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
 		"rehype-widont": "^0.1.1",
 		"remark-gfm": "^4.0.0",
 		"tailwind-merge": "^2.4.0",
-		"tailwind-variants": "^0.2.1"
+		"tailwind-variants": "^0.2.1",
+		"vaul-svelte": "^0.3.2"
 	},
 	"optionalDependencies": {
 		"@rollup/rollup-linux-x64-gnu": "4.9.5"
