feat: add contact and resume sites

--- a/package.json
+++ b/package.json
@@ -5,22 +5,33 @@
 	"scripts": {
 		"dev:main": "cd apps/main && vite dev",
 		"dev:blog": "cd apps/blog && vite dev",
+		"dev:contact": "cd apps/contact && vite dev",
+		"dev:resume": "cd apps/resume && vite dev",
 		"build": "concurrently --kill-others \"npm:build:*\"",
 		"build:main": "cd apps/main && vite build",
 		"build:blog": "cd apps/blog && vite build",
-		"preview": "concurrently --kill-others \"npm:preview:*\"",
-		"preview:main": "cd apps/blog && vite preview",
+		"build:contact": "cd apps/contact && vite build",
+		"build:resume": "cd apps/resume && vite build",
+		"preview:main": "cd apps/main && vite preview",
 		"preview:blog": "cd apps/blog && vite preview",
+		"preview:contact": "cd apps/contact && vite preview",
+		"preview:resume": "cd apps/resume && vite preview",
 		"check": "concurrently --kill-others \"npm:check:*\"",
-		"check:main": "cd apps/blog && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:main": "cd apps/main && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:blog": "cd apps/blog && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:contact": "cd apps/contact && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:resume": "cd apps/resume && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"test": "vitest",
 		"lint": "concurrently --kill-others \"npm:lint:*\"",
 		"lint:main": "cd apps/main && prettier --check . && eslint .",
 		"lint:blog": "cd apps/blog && prettier --check . && eslint .",
+		"lint:contact": "cd apps/contact && prettier --check . && eslint .",
+		"lint:resume": "cd apps/resume && prettier --check . && eslint .",
 		"format": "concurrently --kill-others \"npm:format:*\"",
 		"format:main": "cd apps/main && prettier --write .",
-		"format:blog": "cd apps/blog && prettier --write ."
+		"format:blog": "cd apps/blog && prettier --write .",
+		"format:contact": "cd apps/contact && prettier --write .",
+		"format:resume": "cd apps/resume && prettier --write ."
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-vercel": "^5.4.1",
