feat(archive): initial implementation

--- a/package.json
+++ b/package.json
@@ -3,34 +3,40 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev:main": "cd apps/main && vite dev",
+		"dev:archive": "cd apps/archive && vite dev",
 		"dev:blog": "cd apps/blog && vite dev",
 		"dev:contact": "cd apps/contact && vite dev",
+		"dev:main": "cd apps/main && vite dev",
 		"dev:resume": "cd apps/resume && vite dev",
 		"build": "concurrently --kill-others \"npm:build:*\"",
-		"build:main": "cd apps/main && vite build",
+		"build:archive": "cd apps/archive && vite build",
 		"build:blog": "cd apps/blog && vite build",
 		"build:contact": "cd apps/contact && vite build",
+		"build:main": "cd apps/main && vite build",
 		"build:resume": "cd apps/resume && vite build",
-		"preview:main": "cd apps/main && vite preview",
+		"preview:archive": "cd apps/archive && vite preview",
 		"preview:blog": "cd apps/blog && vite preview",
 		"preview:contact": "cd apps/contact && vite preview",
+		"preview:main": "cd apps/main && vite preview",
 		"preview:resume": "cd apps/resume && vite preview",
 		"check": "concurrently --kill-others \"npm:check:*\"",
-		"check:main": "cd apps/main && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:archive": "cd apps/archive && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:blog": "cd apps/blog && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:contact": "cd apps/contact && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:main": "cd apps/main && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:resume": "cd apps/resume && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"test": "vitest",
 		"lint": "concurrently --kill-others \"npm:lint:*\"",
-		"lint:main": "cd apps/main && prettier --check . && eslint .",
+		"lint:archive": "cd apps/archive && prettier --check . && eslint .",
 		"lint:blog": "cd apps/blog && prettier --check . && eslint .",
 		"lint:contact": "cd apps/contact && prettier --check . && eslint .",
+		"lint:main": "cd apps/main && prettier --check . && eslint .",
 		"lint:resume": "cd apps/resume && prettier --check . && eslint .",
 		"format": "concurrently --kill-others \"npm:format:*\"",
-		"format:main": "cd apps/main && prettier --write .",
+		"format:archive": "cd apps/archive && prettier --write .",
 		"format:blog": "cd apps/blog && prettier --write .",
 		"format:contact": "cd apps/contact && prettier --write .",
+		"format:main": "cd apps/main && prettier --write .",
 		"format:resume": "cd apps/resume && prettier --write ."
 	},
 	"devDependencies": {
@@ -52,6 +58,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^4.2.19",
 		"svelte-check": "^3.6.0",
+		"svelte-loading-spinners": "^0.3.6",
 		"svelte-preprocess-import-assets": "^1.1.0",
 		"tailwindcss": "^3.4.7",
 		"tslib": "^2.4.1",
@@ -64,6 +71,7 @@
 	"dependencies": {
 		"bits-ui": "^0.21.13",
 		"clsx": "^2.1.1",
+		"embla-carousel-svelte": "^8.3.0",
 		"lucide-svelte": "^0.414.0",
 		"mode-watcher": "^0.4.0",
 		"moment": "^2.30.1",
