--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 		"format:resume": "cd apps/resume && prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-vercel": "^5.4.1",
+		"@sveltejs/adapter-vercel": "^5.7.0",
 		"@sveltejs/kit": "^2.8.3",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@tailwindcss/typography": "^0.5.14",
@@ -84,6 +84,9 @@
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1",
 		"vaul-svelte": "^0.3.2"
+	},
+	"overrides": {
+		"esbuild": ">=0.25.0"
 	},
 	"optionalDependencies": {
 		"@rollup/rollup-linux-x64-gnu": "4.9.5"
