feat: use single CSS file and tw config for monorepo

--- a/components.json
+++ b/components.json
@@ -3,7 +3,7 @@
 	"style": "default",
 	"tailwind": {
 		"config": "tailwind.config.ts",
-		"css": "apps/main/src/app.css",
+		"css": "apps/lib/app.css",
 		"baseColor": "stone"
 	},
 	"aliases": {
