--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"format:main": "cd apps/main && prettier --write .",
 		"format:resume": "cd apps/resume && prettier --write ."
 	},
+	"//": "Note that mdsvex is locked to 0.12.3. Any higher than that breaks where rehype-toc places the `<nav />`",
 	"devDependencies": {
 		"@sveltejs/adapter-vercel": "^5.7.0",
 		"@sveltejs/kit": "^2.20.7",
@@ -51,7 +52,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
-		"mdsvex": "^0.12.5",
+		"mdsvex": "0.12.3",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.1.2",
 		"prettier-plugin-tailwindcss": "^0.6.11",
