meta(repo): use `pnpm` instead of `npm`

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"dev:contact": "cd apps/contact && vite dev",
 		"dev:main": "cd apps/main && vite dev",
 		"dev:resume": "cd apps/resume && vite dev",
-		"build": "concurrently --kill-others \"npm:build:*\"",
+		"build": "concurrently --kill-others-on-fail \"pnpm:build:*\"",
 		"build:archive": "cd apps/archive && vite build",
 		"build:blog": "cd apps/blog && vite build",
 		"build:contact": "cd apps/contact && vite build",
@@ -19,20 +19,20 @@
 		"preview:contact": "cd apps/contact && vite preview",
 		"preview:main": "cd apps/main && vite preview",
 		"preview:resume": "cd apps/resume && vite preview",
-		"check": "concurrently --kill-others \"npm:check:*\"",
+		"check": "concurrently --kill-others-on-fail \"pnpm:check:*\"",
 		"check:archive": "cd apps/archive && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:blog": "cd apps/blog && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:contact": "cd apps/contact && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:main": "cd apps/main && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:resume": "cd apps/resume && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"test": "vitest",
-		"lint": "concurrently --kill-others \"npm:lint:*\"",
+		"lint": "concurrently --kill-others-on-fail \"pnpm:lint:*\"",
 		"lint:archive": "cd apps/archive && prettier --check . && eslint .",
 		"lint:blog": "cd apps/blog && prettier --check . && eslint .",
 		"lint:contact": "cd apps/contact && prettier --check . && eslint .",
 		"lint:main": "cd apps/main && prettier --check . && eslint .",
 		"lint:resume": "cd apps/resume && prettier --check . && eslint .",
-		"format": "concurrently --kill-others \"npm:format:*\"",
+		"format": "concurrently --kill-others-on-fail \"pnpm:format:*\"",
 		"format:archive": "cd apps/archive && prettier --write .",
 		"format:blog": "cd apps/blog && prettier --write .",
 		"format:contact": "cd apps/contact && prettier --write .",
