meta: eslint/prettier configuration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,44 +1,35 @@
 {
-    "compilerOptions": {
-        "allowJs": true,
-        "checkJs": true,
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "paths": {
-            "$lib": [
-                "./apps/lib"
-            ],
-            "$lib/*": [
-                "./apps/lib/*"
-            ]
-        },
-        "resolveJsonModule": true,
-        "skipLibCheck": true,
-        "sourceMap": true,
-        "strict": true,
-        "module": "ESNext",
-        "moduleResolution": "Bundler"
+  "compilerOptions": {
+    "allowJs": true,
+    "checkJs": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "paths": {
+      "$lib": ["./apps/lib"],
+      "$lib/*": ["./apps/lib/*"]
     },
-    "exclude": [
-        "node_modules", // node_modules itself
-        "**/node_modules", // node_modules in any subdirectory
-        "dist",
-        "build",
-        ".svelte-kit",
-        ".vercel",
-        "**/*.test.ts",
-        "**/*.spec.ts",
-        "**/svelte.config.js" // Exclude Svelte config files
-    ],
-    "include": [
-        "apps/**/*.ts",
-        "apps/**/*.js",
-        "apps/**/*.svelte",
-        "apps/**/*.d.ts"
-    ]
-    // Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
-    // except $lib which is handled by https://kit.svelte.dev/docs/configuration#files
-    //
-    // If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
-    // from the referenced tsconfig.json - TypeScript does not merge them in
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "strict": true,
+    "module": "ESNext",
+    "moduleResolution": "Bundler"
+  },
+  "exclude": [
+    "node_modules", // node_modules itself
+    "**/node_modules", // node_modules in any subdirectory
+    "dist",
+    "build",
+    ".svelte-kit",
+    ".vercel",
+    "**/*.test.ts",
+    "**/*.spec.ts",
+    "**/svelte.config.js" // Exclude Svelte config files
+  ],
+  "include": ["apps/**/*.ts", "apps/**/*.js", "apps/**/*.svelte", "apps/**/*.d.ts"]
+  // Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
+  // except $lib which is handled by https://kit.svelte.dev/docs/configuration#files
+  //
+  // If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
+  // from the referenced tsconfig.json - TypeScript does not merge them in
 }
