--- a/apps/resume/tsconfig.json
+++ b/apps/resume/tsconfig.json
@@ -1,6 +1,3 @@
 {
-    "extends": [
-        "../../tsconfig.json",
-        "./.svelte-kit/tsconfig.json"
-    ],
+  "extends": ["../../tsconfig.json", "./.svelte-kit/tsconfig.json"]
 }
