--- a/package.json
+++ b/package.json
@@ -1,94 +1,95 @@
 {
-	"name": "camball.io",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev:archive": "cd apps/archive && vite dev",
-		"dev:blog": "cd apps/blog && vite dev",
-		"dev:contact": "cd apps/contact && vite dev",
-		"dev:main": "cd apps/main && vite dev",
-		"dev:resume": "cd apps/resume && vite dev",
-		"build": "concurrently --kill-others-on-fail \"pnpm:build:*\"",
-		"build:archive": "cd apps/archive && vite build",
-		"build:blog": "cd apps/blog && vite build",
-		"build:contact": "cd apps/contact && vite build",
-		"build:main": "cd apps/main && vite build",
-		"build:resume": "cd apps/resume && vite build",
-		"preview:archive": "cd apps/archive && vite preview",
-		"preview:blog": "cd apps/blog && vite preview",
-		"preview:contact": "cd apps/contact && vite preview",
-		"preview:main": "cd apps/main && vite preview",
-		"preview:resume": "cd apps/resume && vite preview",
-		"check": "concurrently --kill-others-on-fail \"pnpm:check:*\"",
-		"check:archive": "cd apps/archive && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:blog": "cd apps/blog && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:contact": "cd apps/contact && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:main": "cd apps/main && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:resume": "cd apps/resume && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"test": "vitest",
-		"lint": "concurrently --kill-others-on-fail \"pnpm:lint:*\"",
-		"lint:archive": "cd apps/archive && prettier --check . && eslint .",
-		"lint:blog": "cd apps/blog && prettier --check . && eslint .",
-		"lint:contact": "cd apps/contact && prettier --check . && eslint .",
-		"lint:main": "cd apps/main && prettier --check . && eslint .",
-		"lint:resume": "cd apps/resume && prettier --check . && eslint .",
-		"format": "concurrently --kill-others-on-fail \"pnpm:format:*\"",
-		"format:archive": "cd apps/archive && prettier --write .",
-		"format:blog": "cd apps/blog && prettier --write .",
-		"format:contact": "cd apps/contact && prettier --write .",
-		"format:main": "cd apps/main && prettier --write .",
-		"format:resume": "cd apps/resume && prettier --write ."
-	},
-	"//": "Note that mdsvex is locked to 0.12.3. Any higher than that breaks where rehype-toc places the `<nav />`",
-	"devDependencies": {
-		"@sveltejs/adapter-vercel": "^5.7.0",
-		"@sveltejs/kit": "^2.20.7",
-		"@sveltejs/vite-plugin-svelte": "^3.1.1",
-		"@tailwindcss/typography": "^0.5.14",
-		"@tailwindcss/vite": "^4.1.3",
-		"@types/eslint": "^8.56.11",
-		"concurrently": "^8.2.2",
-		"eslint": "^9.0.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0",
-		"globals": "^15.0.0",
-		"mdsvex": "0.12.3",
-		"prettier": "^3.3.2",
-		"prettier-plugin-svelte": "^3.1.2",
-		"prettier-plugin-tailwindcss": "^0.6.11",
-		"svelte": "^4.2.19",
-		"svelte-check": "^3.6.0",
-		"svelte-loading-spinners": "^0.3.6",
-		"svelte-preprocess-import-assets": "^1.1.0",
-		"tailwindcss": "^4.1.3",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.0.0-alpha.20",
-		"vite": "^5.4.18",
-		"vitest": "^1.6.1"
-	},
-	"type": "module",
-	"dependencies": {
-		"bits-ui": "^0.21.13",
-		"clsx": "^2.1.1",
-		"embla-carousel-svelte": "^8.3.0",
-		"lucide-svelte": "^0.414.0",
-		"mode-watcher": "^0.4.0",
-		"moment": "^2.30.1",
-		"prism-themes": "^1.9.0",
-		"rehype-autolink-headings": "^7.1.0",
-		"rehype-slug": "^6.0.0",
-		"rehype-toc": "^3.0.2",
-		"rehype-widont": "^0.1.1",
-		"remark-gfm": "^4.0.0",
-		"tailwind-merge": "^2.4.0",
-		"tailwind-variants": "^0.2.1",
-		"vaul-svelte": "^0.3.2"
-	},
-	"overrides": {
-		"esbuild": ">=0.25.0"
-	},
-	"optionalDependencies": {
-		"@rollup/rollup-linux-x64-gnu": "4.9.5"
-	}
+  "name": "camball.io",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev:archive": "cd apps/archive && vite dev",
+    "dev:blog": "cd apps/blog && vite dev",
+    "dev:contact": "cd apps/contact && vite dev",
+    "dev:main": "cd apps/main && vite dev",
+    "dev:resume": "cd apps/resume && vite dev",
+    "build": "concurrently --kill-others-on-fail \"pnpm:build:*\"",
+    "build:archive": "cd apps/archive && vite build",
+    "build:blog": "cd apps/blog && vite build",
+    "build:contact": "cd apps/contact && vite build",
+    "build:main": "cd apps/main && vite build",
+    "build:resume": "cd apps/resume && vite build",
+    "preview:archive": "cd apps/archive && vite preview",
+    "preview:blog": "cd apps/blog && vite preview",
+    "preview:contact": "cd apps/contact && vite preview",
+    "preview:main": "cd apps/main && vite preview",
+    "preview:resume": "cd apps/resume && vite preview",
+    "check": "concurrently --kill-others-on-fail \"pnpm:check:*\"",
+    "check:archive": "cd apps/archive && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:blog": "cd apps/blog && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:contact": "cd apps/contact && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:main": "cd apps/main && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:resume": "cd apps/resume && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "test": "vitest",
+    "lint": "concurrently --kill-others-on-fail \"pnpm:lint:*\"",
+    "lint:archive": "prettier --check apps/archive && eslint apps/archive",
+    "lint:blog": "prettier --check apps/blog && eslint apps/blog",
+    "lint:contact": "prettier --check apps/contact && eslint apps/contact",
+    "lint:main": "prettier --check apps/main && eslint apps/main",
+    "lint:resume": "prettier --check apps/resume && eslint apps/resume",
+    "format": "concurrently --kill-others-on-fail \"pnpm:format:*\"",
+    "format:archive": "prettier --write apps/archive",
+    "format:blog": "prettier --write apps/blog",
+    "format:contact": "prettier --write apps/contact",
+    "format:main": "prettier --write apps/main",
+    "format:resume": "prettier --write apps/resume"
+  },
+  "//": "Note that mdsvex is locked to 0.12.3. Any higher than that breaks where rehype-toc places the `<nav />`",
+  "devDependencies": {
+    "@eslint/js": "^9.27.0",
+    "@sveltejs/adapter-vercel": "^5.7.0",
+    "@sveltejs/kit": "^2.20.7",
+    "@sveltejs/vite-plugin-svelte": "^3.1.1",
+    "@tailwindcss/typography": "^0.5.14",
+    "@tailwindcss/vite": "^4.1.3",
+    "@types/eslint": "^8.56.11",
+    "concurrently": "^8.2.2",
+    "eslint": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-svelte": "^2.36.0",
+    "globals": "^15.0.0",
+    "mdsvex": "0.12.3",
+    "prettier": "^3.3.2",
+    "prettier-plugin-svelte": "^3.1.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "svelte": "^4.2.19",
+    "svelte-check": "^3.6.0",
+    "svelte-loading-spinners": "^0.3.6",
+    "svelte-preprocess-import-assets": "^1.1.0",
+    "tailwindcss": "^4.1.3",
+    "tslib": "^2.4.1",
+    "typescript": "^5.0.0",
+    "typescript-eslint": "^8.0.0-alpha.20",
+    "vite": "^5.4.18",
+    "vitest": "^1.6.1"
+  },
+  "type": "module",
+  "dependencies": {
+    "bits-ui": "^0.21.13",
+    "clsx": "^2.1.1",
+    "embla-carousel-svelte": "^8.3.0",
+    "lucide-svelte": "^0.414.0",
+    "mode-watcher": "^0.4.0",
+    "moment": "^2.30.1",
+    "prism-themes": "^1.9.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
+    "rehype-toc": "^3.0.2",
+    "rehype-widont": "^0.1.1",
+    "remark-gfm": "^4.0.0",
+    "tailwind-merge": "^2.4.0",
+    "tailwind-variants": "^0.2.1",
+    "vaul-svelte": "^0.3.2"
+  },
+  "overrides": {
+    "esbuild": ">=0.25.0"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-darwin-arm64": "^4.41.1"
+  }
 }
