--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "format:blog": "prettier --write apps/blog",
     "format:contact": "prettier --write apps/contact",
     "format:main": "prettier --write apps/main",
-    "format:resume": "prettier --write apps/resume"
+    "format:resume": "prettier --write apps/resume",
+    "prepare": "husky"
   },
   "//": "Note that mdsvex is locked to 0.12.3. Any higher than that breaks where rehype-toc places the `<nav />`",
   "devDependencies": {
@@ -53,6 +54,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.36.0",
     "globals": "^15.0.0",
+    "husky": "^9.1.7",
     "mdsvex": "0.12.3",
     "prettier": "^3.3.2",
     "prettier-plugin-svelte": "^3.1.2",
