meta(lib): fix format/lint; simplify package scripts

--- a/package.json
+++ b/package.json
@@ -26,18 +26,8 @@
     "check:main": "cd apps/main && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:resume": "cd apps/resume && svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "test": "vitest",
-    "lint": "concurrently --kill-others-on-fail \"pnpm:lint:*\"",
-    "lint:archive": "prettier --check apps/archive && eslint apps/archive",
-    "lint:blog": "prettier --check apps/blog && eslint apps/blog",
-    "lint:contact": "prettier --check apps/contact && eslint apps/contact",
-    "lint:main": "prettier --check apps/main && eslint apps/main",
-    "lint:resume": "prettier --check apps/resume && eslint apps/resume",
-    "format": "concurrently --kill-others-on-fail \"pnpm:format:*\"",
-    "format:archive": "prettier --write apps/archive",
-    "format:blog": "prettier --write apps/blog",
-    "format:contact": "prettier --write apps/contact",
-    "format:main": "prettier --write apps/main",
-    "format:resume": "prettier --write apps/resume",
+    "lint": "prettier --check apps/* && eslint apps/*",
+    "format": "prettier --write apps/*",
     "prepare": "husky"
   },
   "//": "Note that mdsvex is locked to 0.12.3. Any higher than that breaks where rehype-toc places the `<nav />`",
