--- a/package.json
+++ b/package.json
@@ -30,44 +30,48 @@
     "format": "prettier --write apps/*",
     "prepare": "husky"
   },
+  "engines": {
+    "node": ">=22"
+  },
   "//": "Note that mdsvex is locked to 0.12.3. Any higher than that breaks where rehype-toc places the `<nav />`",
   "devDependencies": {
-    "@eslint/js": "^9.27.0",
+    "@eslint/js": "^9.30.1",
+    "@internationalized/date": "^3.8.1",
     "@rollup/rollup-darwin-arm64": "^4.41.1",
-    "@sveltejs/adapter-vercel": "^5.7.0",
-    "@sveltejs/kit": "^2.20.7",
-    "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "@sveltejs/adapter-vercel": "^5.7.2",
+    "@sveltejs/kit": "^2.22.2",
+    "@sveltejs/vite-plugin-svelte": "5.1.0",
     "@tailwindcss/typography": "^0.5.14",
-    "@tailwindcss/vite": "^4.1.3",
-    "@types/eslint": "^8.56.11",
-    "concurrently": "^8.2.2",
-    "eslint": "^9.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.45.1",
-    "globals": "^15.0.0",
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/eslint": "^9.6.1",
+    "concurrently": "^9.2.0",
+    "eslint": "^9.30.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-svelte": "^3.10.1",
+    "globals": "^16.3.0",
     "husky": "^9.1.7",
     "mdsvex": "0.12.3",
-    "prettier": "^3.3.2",
-    "prettier-plugin-svelte": "^3.2.6",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "svelte": "^5.0.0",
-    "svelte-check": "^4.0.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-svelte": "^3.4.0",
+    "prettier-plugin-tailwindcss": "^0.6.13",
+    "svelte": "^5.35.2",
+    "svelte-check": "^4.2.2",
     "svelte-loading-spinners": "^0.3.6",
     "svelte-preprocess-import-assets": "^1.1.0",
-    "tailwindcss": "^4.1.3",
-    "tslib": "^2.4.1",
-    "typescript": "^5.5.0",
-    "typescript-eslint": "^8.0.0-alpha.20",
-    "vite": "^5.4.18",
-    "vitest": "^1.6.1"
+    "tailwindcss": "^4.1.11",
+    "tslib": "^2.8.1",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.35.1",
+    "vite": "^6.3.5",
+    "vitest": "^3.2.4"
   },
   "type": "module",
   "dependencies": {
-    "bits-ui": "^0.21.13",
+    "@lucide/svelte": "^0.515.0",
+    "bits-ui": "^2.8.10",
     "clsx": "^2.1.1",
-    "embla-carousel-svelte": "^8.3.0",
-    "lucide-svelte": "^0.414.0",
-    "mode-watcher": "^0.4.0",
+    "embla-carousel-svelte": "^8.6.0",
+    "mode-watcher": "^1.1.0",
     "moment": "^2.30.1",
     "prism-themes": "^1.9.0",
     "rehype-autolink-headings": "^7.1.0",
@@ -76,8 +80,8 @@
     "rehype-widont": "^0.1.1",
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.4.0",
-    "tailwind-variants": "^0.2.1",
-    "vaul-svelte": "^0.3.2"
+    "tailwind-variants": "^1.0.0",
+    "vaul-svelte": "1.0.0-next.7"
   },
   "overrides": {
     "esbuild": ">=0.25.0"
