--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   "type": "module",
   "dependencies": {
     "@lucide/svelte": "^0.515.0",
+    "@vercel/speed-insights": "^1.2.0",
     "bits-ui": "^2.8.10",
     "clsx": "^2.1.1",
     "embla-carousel-svelte": "^8.6.0",
